# http-wasm-guest

./: .gitignore  .rustfmt.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  run.sh
.cargo/: config.toml
.forgejo/workflows/: test.yml
.github/: copilot-instructions.md
.github/workflows/: build.yml  coverage.yml  miri.yml  publish.yml  release.yml  test.yml
.zed/: debug.json
examples/: header.rs  header.yml  info.rs  info.yml  response.rs
src/: api.rs  feature.rs  host.rs  host_logger.rs  lib.rs  log.rs  memory.rs  request.rs  response.rs  sync_cell.rs
src/api/: body.rs  bytes.rs  header.rs  mod.rs  request.rs  response.rs
src/host/: admin.rs  body.rs  bytes.rs  feature.rs  handler.rs  header.rs  log.rs  memory.rs  mod.rs  request.rs  response.rs
src/host/admin/: host_logger.rs
src/host/handler/: ffi.rs  http_handler.rs  memory.rs  mod.rs  test.rs
src/host/handler/ffi/: mock.rs  mod.rs
