[package]
name = "http-wasm-guest"
description = "A Rust library for implementing HTTP-Wasm guest handlers."
version = "0.10.0"
edition = "2024"
repository = "https://github.com/blndfsk/http-wasm-guest"
license = "MIT"
documentation = "https://docs.rs/http-wasm-guest"
keywords = ["http-wasm", "wasm", "http", "plugin", "traefik"]
categories = ["wasm", "web-programming"]

[dependencies]
log = { version = "0.4.29", optional = true }

[features]
default = ["log"]
log = ["dep:log"]

[[example]]
name = "info"
required-features = ["log"]
