[package]
name = "http-wasm-guest"
description = "A Rust library for implementing HTTP-Wasm guest handlers."
version = "0.11.2"
edition = "2024"
repository = "https://github.com/blndfsk/http-wasm-guest"
license = "MIT"
documentation = "https://docs.rs/http-wasm-guest"
keywords = ["http-wasm", "wasm", "http", "plugin", "traefik"]
categories = ["wasm", "web-programming"]
rust-version = "1.85.1"

[dependencies]
log = { version = "0.4", optional = true }

[features]
default = ["log"]
log = ["dep:log"]

[lints.rust]
missing_docs = "warn"

[lints.clippy]
panic = "deny"
unwrap_used = "deny"
missing_assert_message = "warn"
map_unwrap_or = "warn"
get_unwrap = "warn"
unwrap_in_result = "warn"
string_slice = "warn"

[[example]]
name = "info"
required-features = ["log"]
